--- a/src/app/component/body/body.component.html
+++ b/src/app/component/body/body.component.html
@@ -2,4 +2,15 @@
 
 
 
-<app-gallery></app-gallery>
+<app-gallery>
+
+    <!-- <div *ngFor="let foto of array">
+        <img src="{{ foto. img }}" alt="{{ foto.alt }}">
+        <p>{{ foto.color }} </p>
+        <p>{{ foto.price }} </p>
+    </div>   -->
+
+
+
+
+</app-gallery>
