--- a/src/app/component/body/gallery/gallery.component.html
+++ b/src/app/component/body/gallery/gallery.component.html
@@ -1,3 +1,15 @@
-<p>gallery works!</p>
 
-<p *ngFor="let busq of search">jEsto es lo que tiene que pintar {{ busq}}</p>
+<app-form></app-form>
+<div class="gallery">
+    <div class="gallery__container">
+        <div *ngFor="let foto of array" class="gallery__foto">
+            
+            <div class="foto">
+                <img src="{{ foto. img }}" alt="{{ foto.alt }}">
+                <p>{{ foto.color }} </p>
+                <p>{{ foto.price }} </p>
+            </div>  
+        </div>
+    </div>  
+
+ </div>
